# nayti

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: android.yml
app/: build.gradle.kts  gradle.lockfile  proguard-rules.pro
app/src/androidTest/kotlin/app/nayti/: IndexMaintenanceSchedulerInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_stat_nayti.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-night/: styles.xml
benchmark/: build.gradle.kts  gradle.lockfile
docs/: PROVENANCE.md  device-alpha-runbook.md  known-limitations-alpha.md  resource-rehearsal-alpha.md  security-review-alpha.md
docs/adr/: 0001-model-pack-container.md  0002-transformer-quantization.md  0003-durable-index-state.md  0004-immutable-vector-publication.md  0005-atomic-ocr-and-lexical-storage.md  0006-selected-access-quarantine.md  0007-bounded-indexing-scope.md
gradle/: libs.versions.toml  reduced-ort.properties  verification-metadata.xml
indexer/: build.gradle.kts  gradle.lockfile
ml-runtime/: build.gradle.kts  gradle.lockfile
ml-runtime/src/main/cpp/: CMakeLists.txt  native_bridge.cpp  runtime_contract.cpp  runtime_contract.hpp  runtime_contract_test.cpp
model-runtime-proof/: build.gradle.kts  gradle.lockfile
model-tools/: README.md  pyproject.toml
model-tools/manifests/: model-pack-notices.alpha1.md  model-pack-notices.alpha2.md  model-pack-sbom.alpha1.cdx.json  model-pack-sbom.alpha2.cdx.json  pack-profile.alpha1.json  pack-profile.alpha2.json  runtime-sources.v1.json  sources.v1.json
model-tools/scripts/: build_ortx_validation.sh  build_reduced_ort_android.sh  generate_siglip2_android_preprocess_kat.py  run_reduced_ort_android_smoke.sh  run_siglip2_preprocess_android_smoke.sh  run_signed_pack_android_smoke.sh  verify_reduced_ort_aar.sh
model-tools/src/nayti_model_tools/: __init__.py  cli.py  convert_ort.py  export_siglip2.py  export_siglip2_tokenizer.py  export_user2.py  export_user2_tokenizer.py  pack_format.py  pack_profile.py  quantize_encoders.py  sources.py  tokenizer_corpus.py  verify_ocr.py
model-tools/tests/: test_convert_ort.py  test_convert_ort_publication.py  test_pack_format.py  test_pack_profile.py  test_quantize_encoders.py  test_runtime_sources.py  test_sources.py  test_tokenizer_corpus.py
platform-media/: build.gradle.kts  gradle.lockfile
scripts/: assemble_alpha_bundle.sh  check.sh  fetch_reduced_ort.sh  generate_release_sbom.py  release_license_policy.json  run_emulator_matrix.sh  verify_manifest_policy.py  verify_native_page_size.py  verify_ort_jni_r8_contract.py
scripts/tests/: test_generate_release_sbom.py  test_verify_manifest_policy.py  test_verify_native_page_size.py  test_verify_ort_jni_r8_contract.py
search-engine/: build.gradle.kts  gradle.lockfile
search-engine/src/main/cpp/: CMakeLists.txt  exact_search.cpp  exact_search.hpp  mapped_segment.cpp  mapped_segment.hpp  native_bridge.cpp  segment_format.cpp  segment_format.hpp  sha256.cpp  sha256.hpp  vector_benchmark.cpp  vector_proof_test.cpp
storage/: build.gradle.kts  gradle.lockfile
storage/schemas/app.nayti.storage.NaytiDatabase/: 1.json  10.json  2.json  3.json  4.json  5.json  6.json  7.json  8.json  9.json
(+230 files in other folders)
